# g0v0-client-versions

./: .gitignore  README.md  clients.json  main.py  pyproject.toml  version_list.json
.github/workflows/: update-versions.yml
community_clients/: ez2lazer.json
community_versions/: ez2lazer.json
schemas/: clients.schema.json
