[project]
name = "version-hash-generator"
version = "0.1.0"
description = "Generates version hashes for g0v0-server"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "GooGuTeam" }]
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "pysquashfsimage>=0.9.0",
    "stream-unzip>=0.0.99",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "I",     # isort
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "TID",   # flake8-tidy-imports
  "RUF",   # Ruff-specific rules
  "FAST",  # FastAPI
  "YTT",   # flake8-2020
  "S",     # flake8-bandit
  "INP",   # flake8-no-pep420
  "SIM",   # flake8-simplify
  "ARG",   # flake8-unused-arguments
  "PTH",   # flake8-use-pathlib
  "N",     # pep8-naming
  "FURB"   # refurb
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
  "S101",   # assert
  "S311",   # suspicious-non-cryptographic-random-usage
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
force-wrap-aliases = true
combine-as-imports = true
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing_extensions"]
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
